# circt-adapter

./: .gitignore  .gitmodules  README.md  flake.nix  format.sh  get_started.sh  model.json  plots.sh  pyproject.toml  run_adapter.sh  silicon.py
.github/workflows/: formatting.yml
ci/: code_style_check.sh
examples/: boom.json  boom_instance.json  boom_smaller.json  boom_smaller.mlir  boom_smaller_instance.json  boom_smaller_module.json  model.json  plots.sh  visualize-example-instance.json  visualize-example-module.json  visualize-example.json  visualize-example.mlir
src/circt_adapter/: main.py
